--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 1234
-      POSTGRES_DB: midb
+      POSTGRES_DB: platform_db
     volumes:
       - ./.postgres:/var/lib/postgresql/data
+      - ./init_tenant_db.sql:/docker-entrypoint-initdb.d/init_tenant_db.sql
+
