--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,42 @@
 spring:
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
   application:
     name: IDENTITY-SERVICE
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+
 eureka:
   client:
     service-url:
       defaultZone : http://localhost:8761/eureka/
+
+
+initial-user:
+  username: admin
+  password: admin123
+
+
+app:
+  aes:
+    secure-key: 12345678901234567890123456789012
+  rabbitmq:
+    exchange: tenant.identity.exchange
+    queue: tenant.database.queue
+    routing-key: tenant.database.created
+
 
 logging:
   level:
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
     org.springframework.transaction: DEBUG
+
 
 server:
   port: 9898
