--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,34 +10,29 @@ spring:
     exclude:
       - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
-
 eureka:
   client:
     service-url:
       defaultZone : http://localhost:8761/eureka/
 
-
-initial-user:
-  username: admin
-  password: admin123
-
-
 app:
-  properties:
-    page-size: 10
+  initial-user:
+    username: admin
+    password: admin123
+  jwt:
+    secret: diahudhasuidhauisfgyigcnuwciansjdciohbepbhchpqonh
+    expiration: 3000000
   aes:
     secure-key: 12345678901234567890123456789012
   rabbitmq:
     exchange: tenant.identity.exchange
     queue: identity.service.queue
 
-
 logging:
   level:
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
     org.springframework.transaction: DEBUG
-
 
 server:
   port: 9898
